K8s/Project/social-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: social-service
  namespace: game-server
spec:
  replicas: 3
  selector:
    matchLabels:
      app: social-service
  template:
    metadata:
      labels:
        app: social-service
    spec:
      containers:
      - name: social-service
        image: 192.168.101.2:5000/social:v1.0.0
        imagePullPolicy: Always
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "500m"
        ports:
        - containerPort: 50051
          name: grpc
        livenessProbe:
          tcpSocket:
            port: grpc
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          tcpSocket:
            port: grpc
          initialDelaySeconds: 15
          periodSeconds: 5
