K8s/Project/social-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: social-service
  namespace: game-server
spec:
  selector:
    app: social-service
  ports:
    - name: grpc
      port: 50051
      targetPort: 50051
  type: ClusterIP
